added some buttons

--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
     <title>
         Testing!
     </title>
+
+    <link href="./css/index.css" rel="stylesheet"/>
 </head>
 <body>
-    This is the website content!
+    <div>
+        <button class="custom-btn btn-3"><span>Read More</span></button>
+        <button class="custom-btn btn-3"><span>Read More</span></button>
+        <button class="custom-btn btn-3"><span>Read More</span></button>
+        <button class="custom-btn btn-3"><span>Read More</span></button>
+        <button class="custom-btn btn-3"><span>Read More</span></button>
+        <button class="custom-btn btn-3"><span>Read More</span></button>
+    </div>
+    
 </body>
