Formatting, Minecraft Start

--- a/mcB.html
+++ b/mcB.html
@@ -3,14 +3,13 @@
         CNFV Tutorials Home
     </title>
 
-    <link href="css/index.css" rel="stylesheet"/>
+    <link href="./css/index.css" rel="stylesheet"/>
 </head>
 <body>
-   
+    <div class="header">
+        <a href="./index.html">CNFV Tutorials</a>
+    </div>
     <div class = "nav">
-        <div class="header">
-            <a href="./index.html">CNFV Tutorials</a>
-        </div>
         <div class="dropdown">
             <button class="custom-btn btn-3">Minecraft</button>
             <div class="dropdown-content">
