--- a/mcA.html
+++ b/mcA.html
@@ -45,11 +45,12 @@
     </div>
 
     <div class="content">
-        <h1>Welcome to the Code Ninjas Fountain Valley Tutorials Website!</h1>
-        <h2>Please click one of the Camp Buttons to view tutorial content</h2>
-    </div>
-    <div class="content footer">
-        <h4> If you need to make a change to the site, please contact me at ceweiss7@gmail.com</h4>
+        <h1>Welcome to the Minecraft Modding Masters Camp Tutorial Page</h1>
+        <h2>Please scroll through the videos to learn how to run the camp</h2>
+
+        
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/jGfFZ09RCc4?si=WCbUv4pN7axMjHob&amp;controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/QB7jHTtrP_0?si=_8-wdxlgG02A-gXh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     
 </body>
