--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="dropdown">
             <button class="custom-btn btn-3">Other</button>
             <div class="dropdown-content">
-              <a class="btn-3" href="#">Dojo Design</a>
+              <a class="btn-3" href="./3D.html">Dojo Design</a>
               <a class="btn-3" href="#">Competitive Coding</a>
               <a class="btn-3" href="#">Future Minds AI Academy</a>
             </div>
