--- a/3D.html
+++ b/3D.html
@@ -15,43 +15,43 @@
             <button class="custom-btn btn-3">Minecraft</button>
             <div class="dropdown-content">
               <a class="btn-3" href="./mcA.html">Minecraft Modding Masters</a>
-              <a class="btn-3" href="#">Block Builders</a>
+              <a class="btn-3" href="./mcB.html">Block Builders</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="custom-btn btn-3">Roblox</button>
             <div class="dropdown-content">
-              <a class="btn-3" href="#">Roblox World Creators</a>
-              <a class="btn-3" href="#">Block Builders</a>
-              <a class="btn-3" href="#">Next Level Roblox</a>
+              <a class="btn-3" href="./r1.html">Roblox World Creators</a>
+              <a class="btn-3" href="./mcB.html">Block Builders</a>
+              <a class="btn-3" href="./r2.html">Next Level Roblox</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="custom-btn btn-3">LEGO</button>
             <div class="dropdown-content">
-              <a class="btn-3" href="#">Ninja Robotics with LEGO</a>
-              <a class="btn-3" href="#">LEGO Python Engineers</a>
+              <a class="btn-3" href="./l1.html">Ninja Robotics with LEGO</a>
+              <a class="btn-3" href="./l1.html">LEGO Python Engineers</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="custom-btn btn-3">Other</button>
             <div class="dropdown-content">
               <a class="btn-3" href="./3D.html">Dojo Design</a>
-              <a class="btn-3" href="#">Competitive Coding</a>
-              <a class="btn-3" href="#">Future Minds AI Academy</a>
+              <a class="btn-3" href="./cc.html">Competitive Coding</a>
+              <a class="btn-3" href="./ai.html">Future Minds AI Academy</a>
             </div>
         </div>
 
     </div>
 
     <div class="content">
-        <h1>Welcome to the Minecraft Modding Masters Camp Tutorial Page</h1>
+        <h1>Welcome to the Dojo Design and 3D Printing Tutorial Page</h1>
         <h2>Please scroll through the videos to learn how to run the camp</h2>
 
-        <p>How to use Tinkercad</p>
+        <p>How to use Tinkercad (TODO)</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/jGfFZ09RCc4?si=WCbUv4pN7axMjHob&amp;controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>Project Outlines</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Tb-47LFUwVc?si=CBPrn-zP288EP9wK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/o-uDjfxhNTY?si=rR4GNtqGVH2lKUGl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     
     
     </div>
