--- a/r2.html
+++ b/r2.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="content">
-        <h1>Welcome to the Minecraft Modding Masters Camp Tutorial Page</h1>
+        <h1>Welcome to the Next Level Roblox Tutorial Page</h1>
         <h2>Please scroll through the videos to learn how to run the camp</h2>
 
         <p>How to use Tinkercad</p>
