--- a/l1.html
+++ b/l1.html
@@ -49,7 +49,7 @@
         <h2>Please scroll through the videos to learn how to run the camp</h2>
 
         <p>Intro to LEGO Spike</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/jGfFZ09RCc4?si=WCbUv4pN7axMjHob&amp;controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Jz9k6ULh0B8?si=CmWa3uaxzRMAn-vU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>LEGO with Python Projects List</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Tb-47LFUwVc?si=CBPrn-zP288EP9wK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>LEGO Robotics projects List (TODO)</p>
