--- a/3D.html
+++ b/3D.html
@@ -48,8 +48,8 @@
         <h1>Welcome to the Dojo Design and 3D Printing Tutorial Page</h1>
         <h2>Please scroll through the videos to learn how to run the camp</h2>
 
-        <p>How to use Tinkercad (TODO)</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/jGfFZ09RCc4?si=WCbUv4pN7axMjHob&amp;controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>How to use Tinkercad</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/eJ7IK0s1iqg?si=VTjWgnwbHAlNThZB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>Project Outlines</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/o-uDjfxhNTY?si=rR4GNtqGVH2lKUGl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     
