--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
             <button class="custom-btn btn-3">Minecraft</button>
             <div class="dropdown-content">
               <a class="btn-3" href="./mcA.html">Minecraft Modding Masters</a>
-              <a class="btn-3" href="#">Block Builders</a>
+              <a class="btn-3" href="./mcB.html">Block Builders</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="custom-btn btn-3">Roblox</button>
             <div class="dropdown-content">
-              <a class="btn-3" href="#">Roblox World Creators</a>
-              <a class="btn-3" href="#">Block Builders</a>
-              <a class="btn-3" href="#">Next Level Roblox</a>
+              <a class="btn-3" href="./r1.html">Roblox World Creators</a>
+              <a class="btn-3" href="./mcB.html">Block Builders</a>
+              <a class="btn-3" href="./r2.html">Next Level Roblox</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="custom-btn btn-3">LEGO</button>
             <div class="dropdown-content">
-              <a class="btn-3" href="#">Ninja Robotics with LEGO</a>
-              <a class="btn-3" href="#">LEGO Python Engineers</a>
+              <a class="btn-3" href="./l1.html">Ninja Robotics with LEGO</a>
+              <a class="btn-3" href="./l1.html">LEGO Python Engineers</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="custom-btn btn-3">Other</button>
             <div class="dropdown-content">
               <a class="btn-3" href="./3D.html">Dojo Design</a>
-              <a class="btn-3" href="#">Competitive Coding</a>
-              <a class="btn-3" href="#">Future Minds AI Academy</a>
+              <a class="btn-3" href="./cc.html">Competitive Coding</a>
+              <a class="btn-3" href="./ai.html">Future Minds AI Academy</a>
             </div>
         </div>
 
