Roblox Videos (Start)

--- a/r2.html
+++ b/r2.html
@@ -48,8 +48,8 @@
         <h1>Welcome to the Next Level Roblox Tutorial Page</h1>
         <h2>Please scroll through the videos to learn how to run the camp</h2>
 
-        <p>Setup (TODO)</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/jGfFZ09RCc4?si=WCbUv4pN7axMjHob&amp;controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>Setup </p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nN1L0HYS5pI?si=K1emBFOORMj1OjWm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>Monday (TODO)</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/jGfFZ09RCc4?si=WCbUv4pN7axMjHob&amp;controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>Tuesday (TODO)</p>
