--- a/r1.html
+++ b/r1.html
@@ -51,7 +51,7 @@
         <p>Setup </p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/nN1L0HYS5pI?si=K1emBFOORMj1OjWm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>Monday </p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/TDLpKbSfzD8?si=-bfwgsM_9B194qRa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/TDLpKbSfzD8?si=nAYqC8ku8HrT1ost" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>Tuesday (TODO)</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Tb-47LFUwVc?si=CBPrn-zP288EP9wK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>Wednesday (TODO)</p>
